Fix references to Linux

--- a/doc/poddoc/pod/gspool_jobadd.3
+++ b/doc/poddoc/pod/gspool_jobadd.3
@@ -33,10 +33,10 @@ I<delimnum>B<)>
 
 =head1 DESCRIPTION
 
-=head2 Unix and Linux
+=head2 Unix and GNU/Linux
 
 The functions B<gspool_jobadd()> (the first form) and B<gspool_jobres> are used to add a job
-under Unix and Linux.
+under Unix and GNU/Linux.
 
 I<fd> is a file descriptor previously returned by B<gspool_open>
 
