--- a/doc/poddoc/pod/gspool_jobmon.3
+++ b/doc/poddoc/pod/gspool_jobmon.3
@@ -29,7 +29,7 @@ B<void gspool_unsetmon(const int> I<fd>B<)>
 
 =head1 DESCRIPTION
 
-=head2 Unix and Linux
+=head2 Unix and GNU/Linux
 
 The B<gspool_jobmon()> function is used to set the function I<fn> to be
 called upon notification of any changes to the jobs list.
