--- a/doc/poddoc/pod/gspool_jobpbrk.3
+++ b/doc/poddoc/pod/gspool_jobpbrk.3
@@ -29,7 +29,7 @@ I<slotno>B<)>
 
 =head1 DESCRIPTION
 
-=head2 Unix and Linux
+=head2 Unix and GNU/Linux
 
 The function B<gspool_jobpbrk()> is used to retrieve the page break offset
 file of a job.
