--- a/doc/poddoc/pod/gspool_open.3
+++ b/doc/poddoc/pod/gspool_open.3
@@ -22,9 +22,9 @@ B<int gspool_login(const char *>I<host>B<, const char *>I<serv>B<, const char *>
 
 =head1 DESCRIPTION
 
-The B<gspool_open> routine is used to commence a session with the API. The
-first form is that used on Unix or Linux hosts, the user name being
-obtained from the effective user id invoking the routine.
+The B<gspool_open> routine is used to commence a session with the
+API. The first form is that used on Unix or GNU/Linux hosts, the user
+name being obtained from the effective user id invoking the routine.
 
 The second form is that used on Windows hosts, where the Windows
 machine has a static IP address and no password is required.
