--- a/doc/poddoc/pod/gspool_jobdata.3
+++ b/doc/poddoc/pod/gspool_jobdata.3
@@ -29,7 +29,7 @@ I<slotno>B<)>
 
 =head1 DESCRIPTION
 
-=head2 Unix and Linux
+=head2 Unix and GNU/Linux
 
 The function B<gspool_jobdata()> is used to retrieve the job file of a job.
 
