Fixed references to Linux

--- a/doc/poddoc/man/gspool_jobadd.3
+++ b/doc/poddoc/man/gspool_jobadd.3
@@ -155,10 +155,10 @@ struct apispq *\fR\fIjobd\fR\fB, const char *\fR\fIdelim\fR\fB, const unsigned\f
 \&\fIdelimnum\fR\fB)\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-.Sh "Unix and Linux"
-.IX Subsection "Unix and Linux"
+.Sh "Unix and GNU/Linux"
+.IX Subsection "Unix and GNU/Linux"
 The functions \fB\f(BIgspool_jobadd()\fB\fR (the first form) and \fBgspool_jobres\fR are used to add a job
-under Unix and Linux.
+under Unix and GNU/Linux.
 .PP
 \&\fIfd\fR is a file descriptor previously returned by \fBgspool_open\fR
 .PP
