--- a/doc/poddoc/man/gspool_jobmon.3
+++ b/doc/poddoc/man/gspool_jobmon.3
@@ -153,8 +153,8 @@ gspool_setmon \- monitor job and printer list changes on Windows
 \&\fBvoid gspool_unsetmon(const int\fR \fIfd\fR\fB)\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-.Sh "Unix and Linux"
-.IX Subsection "Unix and Linux"
+.Sh "Unix and GNU/Linux"
+.IX Subsection "Unix and GNU/Linux"
 The \fB\f(BIgspool_jobmon()\fB\fR function is used to set the function \fIfn\fR to be
 called upon notification of any changes to the jobs list.
 .PP
