--- a/doc/poddoc/man/gspool_jobpbrk.3
+++ b/doc/poddoc/man/gspool_jobpbrk.3
@@ -151,8 +151,8 @@ gspool_jobpbrk \- retrieve the page offsets and delimiter string
 \&\fIslotno\fR\fB)\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-.Sh "Unix and Linux"
-.IX Subsection "Unix and Linux"
+.Sh "Unix and GNU/Linux"
+.IX Subsection "Unix and GNU/Linux"
 The function \fB\f(BIgspool_jobpbrk()\fB\fR is used to retrieve the page break offset
 file of a job.
 .PP
