--- a/doc/poddoc/man/gspool_open.3
+++ b/doc/poddoc/man/gspool_open.3
@@ -146,9 +146,9 @@ gspool_login \- log in to GNUspool Host from Windows
 \&\fBint gspool_login(const char *\fR\fIhost\fR\fB, const char *\fR\fIserv\fR\fB, const char *\fR\fIuser\fR\fB, char *\fR\fIpass\fR\fB, const classcode_t\fR \fIcl\fR\fB)\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-The \fBgspool_open\fR routine is used to commence a session with the \s-1API\s0. The
-first form is that used on Unix or Linux hosts, the user name being
-obtained from the effective user id invoking the routine.
+The \fBgspool_open\fR routine is used to commence a session with the
+\&\s-1API\s0. The first form is that used on Unix or GNU/Linux hosts, the user
+name being obtained from the effective user id invoking the routine.
 .PP
 The second form is that used on Windows hosts, where the Windows
 machine has a static \s-1IP\s0 address and no password is required.
