--- a/doc/poddoc/man/gspool_jobdata.3
+++ b/doc/poddoc/man/gspool_jobdata.3
@@ -151,8 +151,8 @@ gspool_jobdata \- retrieve the data for a job as a stream
 \&\fIslotno\fR\fB)\fR
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
-.Sh "Unix and Linux"
-.IX Subsection "Unix and Linux"
+.Sh "Unix and GNU/Linux"
+.IX Subsection "Unix and GNU/Linux"
 The function \fB\f(BIgspool_jobdata()\fB\fR is used to retrieve the job file of a job.
 .PP
 \&\fIfd\fR is a file descriptor previously returned by \fBgspool_open\fR. \fIflags\fR
