--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 Installing and building GNUspool
 ================================
 
-  Copyright 2008 Free Software Foundation, Inc.
+  Copyright 2008, 2009 Free Software Foundation, Inc.
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
@@ -14,6 +14,24 @@ all the internal Makefiles and a printer installation script.
 
 After running configure, run "make" and then as superuser "make
 install".
+
+Dependencies
+============
+
+To build GNUspool you will probably need YACC or preferably BISON,
+however the grammar files are provided.
+
+You will also probably need LEX or preferably FLEX, however the
+lexical files are provided - but you will need the FLEX library.
+
+You should have either a recent version of GTK+ or Motif to build the
+X parts but you can make do with the "curses" option if you don't -
+just ignore any build error with those - the "make" passes over those
+directories if they don't build.
+
+Some parts of the installation process use Perl scripts.
+
+The optional CUPS emulation daemon uses Python.
 
 Options to configure
 ====================
@@ -125,11 +143,39 @@ weird things that make it crash.
 Please don't use LessTif as that has some strange bugs like "wrap
 around" on spin boxes doesn't work properly.
 
+Gnuspool user
+=============
+
+The first time you attempt to install you should create a new system user
+"gnuspool", which owns all the GNUspool files. This is done using a Perl
+script which knows about common layouts of password and shadow files.
+Invoke it using the command
+
+       make install-user
+
+You should only need to do this once per system.
+
+(The configure script allows you to select a different user name if
+you want but only do this if you know what you're doing).
+
 Installation
 ============
 
-Use "make install" to install the various programs and data in the
-right places.
+Use
+
+	make install
+
+to install the various programs and data in the right places.
+
+DON'T WORRY about errors in building the GTK programs or if you don't
+have a recent version of GTK - you can still run most of the software
+but you'll have to use the "curses"-based gspl-xpq. If you have a
+Motif library on your system you might want to try that.
+
+Then set the network entries (if you haven't created them from a
+previous installation) with
+
+	make install-net
 
 There is provision to relocate files and directories in other places
 than where the software was built for, using the file
@@ -139,13 +185,6 @@ put when you install. Instead reconfigure and rebuild if you've done
 it wrong.
 
 I'll fix this fairly soon.
-
-Gnuspool user
-=============
-
-The first stage of install attempts to create a new system user
-"gnuspool", who owns all the GNUspool files. This is done using a Perl
-script which knows about common layouts of password and shadow files.
 
 Network setup
 =============
@@ -261,5 +300,11 @@ confirmation question to shut down the scheduler. You will probably
 want to insert the command into the system shutdown script at some
 point. You may find the shell scripts in STARTUP helpful for this.
 
+CUPS Emulation
+==============
+
+To emulate CUPS printers for software which requires them, see the
+"cupspy" subdirectory. You will need Python for this.
+
 John Collins
-July 2008
+July 2008 with updates March 2009
