--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-gnuspool (1.6-1) unstable; urgency=low
+gnuspool (1.6) unstable; urgency=low
 
   [ John M Collins (Xi Software Ltd) ]
   * Initial release
