--- a/doc/poddoc/man/xtlhp.8
+++ b/doc/poddoc/man/xtlhp.8
@@ -123,8 +123,8 @@
 .rm #[ #] #H #V #F C
 .\" ========================================================================
 .\"
-.IX Title "XTLHP 8"
-.TH XTLHP 8 "2009-05-18" "GNUspool Release 1" "GNUspool Print Manager"
+.IX Title "XTLHP.8 1"
+.TH XTLHP.8 1 "2009-11-16" "perl v5.10.0" "User Contributed Perl Documentation"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -406,13 +406,17 @@ Normal termination is denoted by an exit code of zero.
 .PP
 Most of the other exit codes are determined by the control file and
 can be adjusted by the user as required.
-.IP "1." 4
+.IP "1" 4
+.IX Item "1"
 Usage error, invalid option etc.
-.IP "2." 4
+.IP "2" 4
+.IX Item "2"
 Device error, cannot connect socket etc.
-.IP "3." 4
+.IP "4" 4
+.IX Item "4"
 System error.
-.IP "4." 4
+.IP "5" 4
+.IX Item "5"
 \&\s-1SNMP\s0 error.
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
@@ -430,12 +434,3 @@ There is \s-1NO\s0 \s-1WARRANTY\s0, to the extent permitted by law.
 .SH "AUTHOR"
 .IX Header "AUTHOR"
 John M Collins, Xi Software Ltd.
-.SH "POD ERRORS"
-.IX Header "POD ERRORS"
-Hey! \fBThe above document had some coding errors, which are explained below:\fR
-.IP "Around line 330:" 4
-.IX Item "Around line 330:"
-You have '=item 4' instead of the expected '=item 3'
-.IP "Around line 334:" 4
-.IX Item "Around line 334:"
-You have '=item 5' instead of the expected '=item 4'
